--- a/example/progressbar/index.html
+++ b/example/progressbar/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body{
-      background-color: black;
-      margin: 0;
-      overflow: hidden;
-    }
-  </style>
 </head>
+
 <body>
-  <script type="module" src="./src/index.ts"></script>
+  <div class="progress-container">
+    <div class="progress" id="progress"></div>
+  </div>
+
+  <button id="load">
+    Load Data
+  </button>
+
+  <div id="data"></div>
+  <script type="module" src="./index.ts"></script>
 </body>
+
 </html>
