--- a/example/smartcounter/index.html
+++ b/example/smartcounter/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body{
-      background-color: black;
-      margin: 0;
-      overflow: hidden;
-    }
-  </style>
 </head>
+
 <body>
-  <script type="module" src="./src/index.ts"></script>
+  <div class="container">
+    <input id="range" type="number" />
+    <h1 id="display"></h1>
+  </div>
+  <script type="module" src="./index.ts"></script>
 </body>
+
 </html>
