--- a/example/俄罗斯方块/index.html
+++ b/example/俄罗斯方块/index.html
@@ -5,15 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body{
-      background-color: black;
-      margin: 0;
-      overflow: hidden;
-    }
-  </style>
 </head>
 <body>
-  <script type="module" src="./src/index.ts"></script>
+  <script type="module" src="./index.ts"></script>
 </body>
 </html>
