--- a/example/mastering-rxjs-practice-search-finished/index.html
+++ b/example/mastering-rxjs-practice-search-finished/index.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"> -->
 
 <div id="searchPanel">
 	<h1>Search</h1>
@@ -53,3 +53,5 @@
 
 <div id="loading-block" style="display:none; background: rgba(0, 0, 0, 0.6); position: absolute; top: 0; left: 0;">
 </div>
+
+<script type="module" src="./index.ts"></script>
