--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    body{
-      background-color: black;
-      margin: 0;
-      overflow: hidden;
-    }
-  </style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<style>
+		#dot {
+			margin-top: 10px;
+			height: 30px;
+			width: 30px;
+			background-color: lightgray;
+			border-radius: 50%;
+			transition: all 0.6s ease-in-out;
+			text-align: center;
+			color: white;
+		}
+
+		#timer {
+			position: absolute;
+			top: 150px;
+			left: 150px;
+			opacity: 0.1;
+			font-size: 60px;
+		}
+	</style>
 </head>
+
 <body>
-  <script type="module" src="./src/index.ts"></script>
+	<div id="timer"></div>
+	<div id="dot"></div>
+	<script type="module" src="./src/index.ts"></script>
 </body>
+
 </html>
